--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@alch/alchemy-web3": "^1.4.7",
     "axios": "^0.27.2",
+    "bignumber": "^1.1.0",
     "core-js": "^3.8.3",
     "emailjs-com": "^3.2.0",
+    "ethers": "^6.12.0",
     "firebase": "^8.10.0",
+    "moralis": "^2.25.2",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
-    "vuetify": "^2.6.0",
+    "vuetify": "^2.7.1",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
