this day i built quantools portfolio

--- a/package.json
+++ b/package.json
@@ -9,6 +9,13 @@
   },
   "dependencies": {
     "@alch/alchemy-web3": "^1.4.7",
+    "@emailjs/browser": "^4.3.3",
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-brands-svg-icons": "^6.6.0",
+    "@fortawesome/free-regular-svg-icons": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/vue-fontawesome": "^2.0.10",
+    "@mdi/font": "^7.4.47",
     "axios": "^0.27.2",
     "bignumber": "^1.1.0",
     "core-js": "^3.8.3",
@@ -24,6 +31,7 @@
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@mdi/js": "^7.4.47",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
